base/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - grafana.local
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - kiali.local
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - prometheus.local
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-svc
  namespace: istio-system
spec:
  hosts:
    - jaeger.local
  gateways:
    - ingressgateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
---
